--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
       - ./data:/opt/airflow/data
+      - ./requirements.txt:/requirements.txt
     command: >
       bash -c "pip install -r /requirements.txt && airflow scheduler"
     restart: always
